# math-mcp

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  env.example  pyproject.toml  requests.jsonl  requirements.txt  start.sh  stop.sh
docs/: PLOTTING_IMPLEMENTATION.md  PLOTTING_SPEC.md  SPEC.md  TESTING.md  claude_desktop_config.json.example  math-mcp.mdc  mcp.json.http  mcp.json.http-example
src/math_mcp/: __init__.py  batch_tools.py  plot_output.py  plotting_tools.py  scipy_tools.py  server.py  stats_tools.py  sympy_tools.py  unit_tools.py  utils.py
tests/: test-batch-http.sh  test-plot-http.sh  test_batch_tools.py  test_http.py  test_plot_output.py  test_plotting.py  test_server.py  test_server_green_path.py  test_stats.py
