[project]
name = "math-mcp"
version = "0.1.0"
description = "MCP server for symbolic mathematics using SymPy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
    "mcp[cli]>=1.0.0",
    "scipy>=1.10",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[project.scripts]
math-mcp = "math_mcp.server:main"
